--- a/Web-Application/templates/LoginRegistrationForm/index.html
+++ b/Web-Application/templates/LoginRegistrationForm/index.html
@@ -30,11 +30,11 @@
                     <a class="hiddenanchor" id="tologin"></a>
                     <div id="wrapper">
                         <div id="login" class="animate form">
-                            <form  action="../dashboard/index.html" autocomplete="on"> 
+                            <form  action="http://10.130.10.7:8080/DBProject/login" autocomplete="on" method="get"> 
                                 <h1>Log in</h1> 
                                 <p> 
                                     <label for="username" class="uname" data-icon="u" > Your email or username </label>
-                                    <input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
+                                    <input id="username" name="id" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
                                 </p>
                                 <p> 
                                     <label for="password" class="youpasswd" data-icon="p"> Your password </label>
