--- a/Web-Application/templates/dashboard/index.html
+++ b/Web-Application/templates/dashboard/index.html
@@ -59,6 +59,28 @@
       z-index: 900;
     }
     </style>
+    <script src='https://code.jquery.com/jquery-1.12.4.js'></script>
+    <script src='https://code.jquery.com/ui/1.12.0/jquery-ui.js'></script>
+    <script>
+        $(document).ready(function(){
+            // $("#getlogin").click(function(){
+            //     console.log("name");
+            //     var x = $("#username").val();
+            //     var y = $("#password").val();
+            //     $.get("http://10.130.10.7:8080/DBProject/Login",{ id : x, password : y}, function(data, status){
+            //         console.log(data["status"]);
+            //         if (data["status"] == true) {
+            //             window.location.href = "../dashboard/index.html";
+            //         }
+            //         else{
+            //             alert("Wrong password or username");
+            //             window.location.href = "index.html";
+            //         }
+            //     });
+            // });
+            console.log("assssss");
+        });
+    </script>
   </head>
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
@@ -244,7 +266,6 @@
           </g>
         </defs>
       </svg>
-      <a href="https://github.com/google/material-design-lite/blob/master/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
     <script src="../../material.min.js"></script>
   </body>
 </html>
