--- a/Web-Application/templates/LoginRegistrationForm/index.html
+++ b/Web-Application/templates/LoginRegistrationForm/index.html
@@ -24,6 +24,7 @@
                 console.log("name");
                 var x = $("#username").val();
                 var y = $("#password").val();
+                sessionStorage.setItem('id',x);
                 $.get("http://10.130.10.7:8080/DBProject/Login",{ id : x, password : y}, function(data, status){
                     console.log(data["status"]);
                     if (data["status"] == true) {
