--- a/Web-Application/templates/dashboard/index.html
+++ b/Web-Application/templates/dashboard/index.html
@@ -104,8 +104,6 @@
                     var temp = element["type"] + " : ";
                     temp += element["id"] + ",";
                     temp += element["name"];
-                // temp += element["Department"] + ",";
-                // temp += element["credits"];
                 
                 var obj = {label:element['name'],value: temp};
                 src.push(obj);
@@ -184,6 +182,7 @@
       </header>
       <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
+        <a class="mdl-navigation__link" href="edit-details.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">edit</i>Edit your details</a>
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">report</i>Spam</a>
