--- a/Web-Application/templates/LoginRegistrationForm/css/style.css
+++ b/Web-Application/templates/LoginRegistrationForm/css/style.css
@@ -100,12 +100,24 @@ a.hiddenanchor{
 	color: rgb(190, 188, 188); 
 	font-style: italic;
 }
+::-webkit-select-placeholder {
+	color: rgb(190, 188, 188); 
+	font-style: italic;
+}
 input:-moz-placeholder,
 textarea:-moz-placeholder{ 
 	color: rgb(190, 188, 188);
 	font-style: italic;
 } 
+select:-moz-placeholder,
+textarea:-moz-placeholder{ 
+	color: rgb(190, 188, 188);
+	font-style: italic;
+} 
 input {
+  outline: none;
+}
+select {
   outline: none;
 }
 
@@ -138,6 +150,26 @@ input {
 	   -moz-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
 	        box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.9) inset;
 } 
+#wrapper select {
+	width: 92%;
+	margin-top: 4px;
+	padding: 10px 5px 10px 32px;	
+	border: 1px solid rgb(178, 178, 178);
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	  -moz-box-sizing : content-box;
+	       box-sizing : content-box;
+	-webkit-border-radius: 3px;
+	   -moz-border-radius: 3px;
+	        border-radius: 3px;
+	-webkit-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+	   -moz-box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+	        box-shadow: 0px 1px 4px 0px rgba(168, 168, 168, 0.6) inset;
+	-webkit-transition: all 0.2s linear;
+	   -moz-transition: all 0.2s linear;
+	     -o-transition: all 0.2s linear;
+	        transition: all 0.2s linear;
+}
 
 /** the magic icon trick ! **/
 [data-icon]:after {
@@ -362,6 +394,10 @@ p.change_link{
 /** yerk some ugly IE fixes 'cause I know someone will ask "why does it look ugly in IE?", no matter how many warnings I will put in the article */
 
 .lt8 #wrapper input{
+	padding: 10px 5px 10px 32px;
+    width: 92%;
+}
+.lt8 #wrapper select{
 	padding: 10px 5px 10px 32px;
     width: 92%;
 }
