default profile pic

--- a/Web-Application/templates/dashboard/index.html
+++ b/Web-Application/templates/dashboard/index.html
@@ -85,8 +85,8 @@
                 var image = new Image();
                 var x1 = sessionStorage.getItem('id');
                 var x2 = "http://10.130.10.49:8080/DBProject/UploadPhoto?id="+x1;
-                document.getElementById("image_id").src=x2;
-                console.log( document.getElementById("image_id").src);
+                // document.getElementById("image_id").src=x2;
+                // console.log( document.getElementById("image_id").src);
                 // if(document.getElementById("image_id").length>0)
                 // {
                 //   ;
@@ -95,15 +95,15 @@
                 // {
                 //   document.getElementById("image_id").src="images/user.jpg";
                 // }
-                // image.src= ("images/".concat(sessionStorage.getItem('id'))).concat(".png");
-                // console.log(image.width);
-                // image.onload = function(){
-                //    document.getElementById("image_id").src=image.src;
-                // }
-                // image.onerror = function()
-                // {
-                //    document.getElementById("image_id").src="images/user.jpg";
-                // }
+                image.src= x2;
+                console.log(image.width);
+                image.onload = function(){
+                   document.getElementById("image_id").src=image.src;
+                }
+                image.onerror = function()
+                {
+                   document.getElementById("image_id").src="images/user.jpg";
+                }
                 // console.log(sessionStorage.getItem('id'));
 
                 $.get("http://10.130.10.49:8080/DBProject/GetAllSearch", {id : sessionStorage.getItem('id')},function(data,status) {
@@ -185,7 +185,7 @@
     </header>
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
       <header class="demo-drawer-header">
-        <img id="image_id" class="demo-avatar" src="images/user.jpg">
+        <img id="image_id" class="demo-avatar" src="images/user.jpg" alt="images/user.jpg">
         <div class="demo-avatar-dropdown">
           <span>hello@example.com</span>
           <div class="mdl-layout-spacer"></div>
