--- a/Web-Application/templates/dashboard/Home.html
+++ b/Web-Application/templates/dashboard/Home.html
@@ -110,95 +110,117 @@
       form1.target='';
     }
     function handle(ele) {
-              // console.log("sfnasdknaskl");
-              if(event.keyCode == 13) {
-               event.preventDefault();
-               alert(ele.value);        
-             }
-           }
-           $(document).ready(function(){  
+        // console.log("sfnasdknaskl");
+        if(event.keyCode == 13) {
+        event.preventDefault();
+        alert(ele.value);        
+      }
+    }
+$(document).ready(function(){  
 
-            if(sessionStorage.getItem('id')==null)
-            {
-                // console.log("zsd,nzcfzjkl");
+  if(sessionStorage.getItem('id')==null)
+  {
+    // console.log("zsd,nzcfzjkl");
 
-                alert("Session completed. Plz login again");
-                window.location.href = "../LoginRegistrationForm/index.html";
-              }
-              else
-              {
+    alert("Session completed. Plz login again");
+    window.location.href = "../LoginRegistrationForm/index.html";
+  }
+  else
+  {
 
-                // Loading the images
-                var image = new Image();
-                var image_profile_pic = new Image();
-                var x1 = sessionStorage.getItem('id');
-                var x2 = "http://10.130.10.8:8080/DBProject/UploadPhoto?id="+x1;
-                var x = sessionStorage.getItem('id');
-                document.getElementById("id").value = x;
-                image.src= x2;
-                image_profile_pic.src=x2;
-                image.onload = function(){
-                 document.getElementById("image_id").src=image.src;
-                }
-                image.onerror = function()
-                {
-                  document.getElementById("image_id").src="images/user.jpg";
-                }
-                image_profile_pic.onload = function(){
-                  document.getElementById("profile_pic").src=image_profile_pic.src;
-                }
-                image_profile_pic.onerror = function()
-                {
-                  document.getElementById("profile_pic").src="images/user.jpg";
-                }
+    // Loading the images
+    var image = new Image();
+    var image_profile_pic = new Image();
+    var x1 = sessionStorage.getItem('id');
+    var x2 = "http://10.130.10.8:8080/DBProject/UploadPhoto?id="+x1;
+    var x = sessionStorage.getItem('id');
+    document.getElementById("id").value = x;
+    image.src= x2;
+    image_profile_pic.src=x2;
+    image.onload = function(){
+     document.getElementById("image_id").src=image.src;
+    }
+    image.onerror = function()
+    {
+      document.getElementById("image_id").src="images/user.jpg";
+    }
+    image_profile_pic.onload = function(){
+      document.getElementById("profile_pic").src=image_profile_pic.src;
+    }
+    image_profile_pic.onerror = function()
+    {
+      document.getElementById("profile_pic").src="images/user.jpg";
+    }
 
-                $.get("http://10.130.10.8:8080/DBProject/GetAllSearch", {id : sessionStorage.getItem('id')},function(data,status) {
+    $.get("http://10.130.10.8:8080/DBProject/GetAllSearch", {id : sessionStorage.getItem('id')},function(data,status) {
 
-                  console.log('Entered GetAllCourse');
-                  var src = new Array();
+      console.log('Entered GetAllCourse');
+      var src = new Array();
 
-                  $.each(data,function(index,element){
+      $.each(data,function(index,element){
 
-                    var temp = element["type"] + " : ";
-                    temp += element["id"] + ",";
-                    temp += element["name"];
-                    
-                    var obj = {label:element['name'],value: temp};
-                    src.push(obj);
+        var temp = element["type"] + " : ";
+        temp += element["id"] + ",";
+        temp += element["name"];
+        
+        var obj = {label:element['name'],value: temp};
+        src.push(obj);
 
-                  });
-                  console.log(src);
-                  $("#search").autocomplete({
-                    source: src
-                  });
+      });
+      console.log(src);
+      $("#search").autocomplete({
+        source: src
+      });
 
-                });
-                
-                $("#logout").click(function(){
+    });
+    
+    $("#logout").click(function(){
 
-                 $.get("http://10.130.10.8:8080/DBProject/Logout", function(data, status){
-                  console.log(data["status"]);
-                  if (data["status"] == true) {
-                      window.location.href = "../LoginRegistrationForm/index.html";
-                    }
-                    else{
-                      alert("Cannot logout");
-                      window.location.href = "index.html";
-                    }
-                  });
-                });
-                // $('#image_id').click(function(){
-                //     $('input[type=file]').click();
-                // });
-                // $('#upload_photo').click(function(){
-                //    // console.log($('#photo').val());
-                //    window.location.href = "upload.html";
-                //    // window.open('upload.html','Upload Photo','menubar=0, toolbar=0,location=0, directories=0, status=0,crollbars=yes,width=650,height=500');
-                //  });
-                
-                // Loading name and intro
-                
-}
+      $.get("http://10.130.10.8:8080/DBProject/Logout", function(data, status){
+        console.log(data["status"]);
+        if (data["status"] == true) {
+          window.location.href = "../LoginRegistrationForm/index.html";
+        }
+        else{
+          alert("Cannot logout");
+          window.location.href = "index.html";
+        }
+      });
+
+    });
+    // $('#image_id').click(function(){
+    //     $('input[type=file]').click();
+    // });
+    // $('#upload_photo').click(function(){
+    //    // console.log($('#photo').val());
+    //    window.location.href = "upload.html";
+    //    // window.open('upload.html','Upload Photo','menubar=0, toolbar=0,location=0, directories=0, status=0,crollbars=yes,width=650,height=500');
+    //  });
+
+    // // Loading name and intro
+    $.get("http://10.130.10.8:8080/DBProject/GetDetails", {id : sessionStorage.getItem('id'), type : "reader"},function(data,status) {
+
+      console.log('Entered GetDetails');
+      var name;
+      var intro;
+      
+      if (data["status"] == true) {
+
+        // Get info from servlet
+        name = data["name"];
+        intro = data["intro"];
+
+        // Update info in page
+        document.getElementById("cover-name").innerHTML = name;
+        document.getElementById("cover-intro").innerHTML = intro;
+        
+      }
+      else {
+        alert("Can't retrieve details");
+      }
+
+    });
+  }
 });
 </script>
 </head>
