--- a/Web-Application/templates/LoginRegistrationForm/edit-details.html
+++ b/Web-Application/templates/LoginRegistrationForm/edit-details.html
@@ -100,7 +100,7 @@
                     console.log(data["status"]);
                     if (data["status"] == true) {
                         alert("Updates Successfully");
-                        window.location.href = "../dashboard/index.html";
+                        window.location.href = "../dashboard/Home.html";
                     }
                     else{
                         alert("Internal Error");
