--- a/Web-Application/templates/LoginRegistrationForm/index.html
+++ b/Web-Application/templates/LoginRegistrationForm/index.html
@@ -24,10 +24,10 @@
                 console.log("name");
                 var x = $("#username").val();
                 var y = $("#password").val();
-                sessionStorage.setItem('id',x);
                 $.get("http://10.130.10.8:8080/DBProject/Login",{ id : x, password : y}, function(data, status){
                     console.log(data["status"]);
                     if (data["status"] == true) {
+                        sessionStorage.setItem('id',x);
                         window.location.href = "../dashboard/Home.html";
                     }
                     else{
@@ -60,7 +60,9 @@
                   }
                 }
                 else{
+                  sessionStorage.setItem('id',a);
                   alert("Done successfully");
+                  window.location.href = "edit-details.html";
                 }
               });
             });
