--- a/Web-Application/templates/dashboard/styles.css
+++ b/Web-Application/templates/dashboard/styles.css
@@ -202,7 +202,7 @@ _:-ms-input-placeholder, :root .demo-graph {
 }
 .demo-updates .mdl-card__title {
   min-height: 200px;
-  background-image: url('images/dog.png');
+  /*background-image: url('images/dog.png');*/
   background-position: 90% 100%;
   background-repeat: no-repeat;
 }
@@ -327,3 +327,10 @@ _:-ms-input-placeholder, :root .demo-graph {
    content: "\2605";
    position: absolute;
 }*/
+
+#friend-list_head {
+  font-size:20px;
+  vertical-align: top;
+  padding-top: 0px;
+  margin-top: 0px;
+}
