--- a/Web-Application/templates/dashboard/index.html
+++ b/Web-Application/templates/dashboard/index.html
@@ -193,6 +193,21 @@
 											}
 										});
 							 });
+								$('#form1').submit(function(e){
+								    // e.preventDefault();
+								    // window.location.href = "../LoginRegistrationForm/index.html";
+								    // console.log("yop");
+								    // $.ajax({
+								    //     url:'http://10.130.10.8:8080/DBProject/UploadPhoto',
+								    //     type:'post',
+								    //     data:$('#form1').serialize(),
+								    //     success:function(){
+								    //         //whatever you wanna do after the form is successfully submitted
+								    //     }
+								    // });
+								// $(this).submit();
+
+								});
 								// $('#image_id').click(function(){
 								//     $('input[type=file]').click();
 								// });
@@ -399,6 +414,7 @@
 																</svg>
 																<script src="../../material.min.js"></script>
 
+<iframe name="formSending"></iframe>
  <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -409,7 +425,7 @@
 
     				<center>
        
-        <form method="post" action="http://10.130.10.8:8080/DBProject/UploadPhoto" enctype="multipart/form-data" id="form1">
+        <form method="post" action="http://10.130.10.8:8080/DBProject/UploadPhoto" enctype="multipart/form-data" id="form1" target="formSending">
             <table border="0">
                 <tr>
                     <td>Photo: </td>
@@ -417,7 +433,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <input type="submit" value="Save">
+                        <input type="submit" value="Save" id="savesubmit">
                     </td>	
                 </tr>
             </table>
@@ -438,6 +454,9 @@ var modal = document.getElementById('myModal');
 // Get the button that opens the modal
 var btn = document.getElementById("upload_photo");
 
+// Get the button that saves the modal
+var btn1 = document.getElementById("savesubmit");
+
 // Get the <span> element that closes the modal
 var span = document.getElementsByClassName("close")[0];
 
@@ -449,6 +468,15 @@ btn.onclick = function() {
 // When the user clicks on <span> (x), close the modal
 span.onclick = function() {
     modal.style.display = "none";
+}
+
+// When the user clicks save close the modal
+btn1.onclick = function() {
+    modal.style.display = "none";
+    // window.location.href = "index.html";
+    setTimeout(function(){
+    location.reload();
+		},1000);
 }
 
 // When the user clicks anywhere outside of the modal, close it
